kind-lab/elastic-search.yaml
# create elk-logger-data folder in /mnt/nfs_share path of fns server mount directory
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: elk-logger

---
#Persistance volume
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: elk-logger-pv-nfs
#   labels:
#     type: elk-logger-pv-nfs
# spec:
#   storageClassName: manual
#   capacity:
#     storage: 20Gi
#   accessModes:
#     - ReadWriteMany
#   nfs:
#     server: 192.168.0.109
#     path: "/mnt/nfs_share"

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: elk-logger-pvc
#   namespace: elk-logger
# spec:
#   storageClassName: manual
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 15Gi       
---
# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-logging
  namespace: elk-logger
  labels:
    k8s-app: elasticsearch-logging
    version: v6.2.4
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  serviceName: elasticsearch-logging
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      version: v6.2.4
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-logging
        version: v6.2.4
        kubernetes.io/cluster-service: "true"
    spec:
      # volumes:
      # - name: elasticsearch-logging
      #   persistentVolumeClaim:
      #     claimName: elk-logger-pvc    
      serviceAccountName: elasticsearch-logging
      containers:
      - image: k8s.gcr.io/elasticsearch:v6.2.4
        name: elasticsearch-logging
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        # volumeMounts:
        # - name: elasticsearch-logging
        #   mountPath: /data
        #   subPath: elk-logger-data
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: elk-logger
  labels:
    k8s-app: elasticsearch-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Elasticsearch"
spec:
  type: NodePort
  ports:
  - port: 9200
    protocol: TCP
    targetPort: db
    nodePort: 31335
  selector:
    k8s-app: elasticsearch-logging
